// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewsFeedSocialCount matches snapshot 1`] = `
<div>
  <div
    class="flex items-center gap-[6px] px-[3px]"
  >
    <div
      class="flex items-center text-neutral-300"
    >
      <svg
        class="lucide lucide-heart"
        fill="none"
        height="18"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 14c1.49-1.46 3-3.21 3-5.5A5.5 5.5 0 0 0 16.5 3c-1.76 0-3 .5-4.5 2-1.5-1.5-2.74-2-4.5-2A5.5 5.5 0 0 0 2 8.5c0 2.3 1.5 4.05 3 5.5l7 7Z"
        />
      </svg>
      <label
        class="font-roboto peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-neutral-400 font-medium text-sm px-[5px]"
      >
        10
      </label>
    </div>
    <div
      class="flex items-center text-neutral-300"
    >
      <svg
        class="lucide lucide-link2"
        fill="none"
        height="18"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9 17H7A5 5 0 0 1 7 7h2"
        />
        <path
          d="M15 7h2a5 5 0 1 1 0 10h-2"
        />
        <line
          x1="8"
          x2="16"
          y1="12"
          y2="12"
        />
      </svg>
      <label
        class="font-roboto peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-neutral-400 font-medium text-sm px-[5px]"
      >
        5
      </label>
    </div>
    <div
      class="flex items-center text-neutral-300"
    >
      <svg
        class="lucide lucide-message-circle"
        fill="none"
        height="18"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7.9 20A9 9 0 1 0 4 16.1L2 22Z"
        />
      </svg>
      <label
        class="font-roboto peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-neutral-400 font-medium text-sm px-[5px]"
      >
        3
      </label>
    </div>
  </div>
</div>
`;

exports[`NewsFeedSocialCount matches snapshot with zero counts 1`] = `
<div>
  <div
    class="flex items-center gap-[6px] px-[3px]"
  >
    <div
      class="flex items-center text-neutral-300"
    >
      <svg
        class="lucide lucide-heart"
        fill="none"
        height="18"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 14c1.49-1.46 3-3.21 3-5.5A5.5 5.5 0 0 0 16.5 3c-1.76 0-3 .5-4.5 2-1.5-1.5-2.74-2-4.5-2A5.5 5.5 0 0 0 2 8.5c0 2.3 1.5 4.05 3 5.5l7 7Z"
        />
      </svg>
      <label
        class="font-roboto peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-neutral-400 font-medium text-sm px-[5px]"
      >
        0
      </label>
    </div>
    <div
      class="flex items-center text-neutral-300"
    >
      <svg
        class="lucide lucide-link2"
        fill="none"
        height="18"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9 17H7A5 5 0 0 1 7 7h2"
        />
        <path
          d="M15 7h2a5 5 0 1 1 0 10h-2"
        />
        <line
          x1="8"
          x2="16"
          y1="12"
          y2="12"
        />
      </svg>
      <label
        class="font-roboto peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-neutral-400 font-medium text-sm px-[5px]"
      >
        0
      </label>
    </div>
    <div
      class="flex items-center text-neutral-300"
    >
      <svg
        class="lucide lucide-message-circle"
        fill="none"
        height="18"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7.9 20A9 9 0 1 0 4 16.1L2 22Z"
        />
      </svg>
      <label
        class="font-roboto peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-neutral-400 font-medium text-sm px-[5px]"
      >
        0
      </label>
    </div>
  </div>
</div>
`;

exports[`NewsFeedSocialCount renders with large numbers 1`] = `
<div>
  <div
    class="flex items-center gap-[6px] px-[3px]"
  >
    <div
      class="flex items-center text-neutral-300"
    >
      <svg
        class="lucide lucide-heart"
        fill="none"
        height="18"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 14c1.49-1.46 3-3.21 3-5.5A5.5 5.5 0 0 0 16.5 3c-1.76 0-3 .5-4.5 2-1.5-1.5-2.74-2-4.5-2A5.5 5.5 0 0 0 2 8.5c0 2.3 1.5 4.05 3 5.5l7 7Z"
        />
      </svg>
      <label
        class="font-roboto peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-neutral-400 font-medium text-sm px-[5px]"
      >
        1000
      </label>
    </div>
    <div
      class="flex items-center text-neutral-300"
    >
      <svg
        class="lucide lucide-link2"
        fill="none"
        height="18"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9 17H7A5 5 0 0 1 7 7h2"
        />
        <path
          d="M15 7h2a5 5 0 1 1 0 10h-2"
        />
        <line
          x1="8"
          x2="16"
          y1="12"
          y2="12"
        />
      </svg>
      <label
        class="font-roboto peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-neutral-400 font-medium text-sm px-[5px]"
      >
        500
      </label>
    </div>
    <div
      class="flex items-center text-neutral-300"
    >
      <svg
        class="lucide lucide-message-circle"
        fill="none"
        height="18"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7.9 20A9 9 0 1 0 4 16.1L2 22Z"
        />
      </svg>
      <label
        class="font-roboto peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-neutral-400 font-medium text-sm px-[5px]"
      >
        250
      </label>
    </div>
  </div>
</div>
`;
